# buildxargs

./: Cargo.toml  LICENSE  README.md  _.md  tryin.sh  well.sh  wrapper.sh
.github/: dependabot.yml
.github/workflows/: buildx.yml  rust.yml
intermediaries/: 001.sh  002.sh  003.sh  004.sh  005.sh  006.sh  007.sh  008.sh  009.sh  010.sh  wat.Dockerfile
src/: buildx.rs  contracts.rs  lib.rs  main.rs
tests/: buildx.rs  cli.rs  lib.rs  usage.rs
