[package]
name = "buildxargs"
version = "1.3.0"
edition = "2021"
authors = ["Pierre Fenoll <pierrefenoll@gmail.com>"]
description = "xargs for BuildKit with docker buildx bake"
keywords = ["xargs", "buildkit", "docker", "visualization"]
license = "MIT"
repository = "https://github.com/fenollp/buildxargs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
shlex = "1"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
