[package]
authors = [ "Pierre Fenoll <pierrefenoll@gmail.com>" ]
description = "xargs for BuildKit with docker buildx bake"
edition = "2021"
keywords = [ "buildkit", "docker", "visualization", "xargs" ]
license = "MIT"
name = "buildxargs"
repository = "https://github.com/fenollp/buildxargs"
version = "1.3.0"


[dependencies]
clap = { version = "4", features = [ "color", "derive" ] }
shlex = "1"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
test-case = "3"
