[package]
authors = [ "Pierre Fenoll <pierrefenoll@gmail.com>" ]
description = "xargs for BuildKit with docker buildx bake"
edition = "2021"
keywords = [ "buildkit", "docker", "visualization", "xargs" ]
license = "MIT"
name = "buildxargs"
repository = "https://github.com/fenollp/buildxargs"
version = "1.4.0"


[dependencies]
pico-args = { version = "0,>=0.5", features = [ "eq-separator" ] }
shlex = "1"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
test-case = "3"
